--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 <title>rdgfb's website</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <p style="position: absolute; left: 5px; top: 10px">this is my website</p>
