--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>rdgfb's website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="rdgfb's website. yeah. that's it. just click here for projects of mine. why am i even here?">
 </head>
 <body>
 <p style="position: absolute; left: 5px; top: 10px">this is my website</p>
