--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1425,6 +1425,8 @@ function updateBest(){
     if (goals5==10){
     buyAnti()
     }
+}
+function checkChallenge(){
     if (presses>=100 && challenge==7){
     goals0+=1
     challenge=0
@@ -2003,6 +2005,9 @@ function updatePressing(){
     if (challenge==7){
     document.getElementById("chalid").innerText="Get 100 presses."
     }
+    if (challenge!==1 && challenge!== 6 && tutorialmode==0){
+        document.getElementById("pressing").disabled=false;
+    }
     if (challenge==1){
     document.getElementById("chalid").innerText="No manual pressing. "+((10*(goals1+1))-mlevel)+" levels to go!"
     document.getElementById("pressing").disabled=true
@@ -2192,12 +2197,24 @@ function updatePressing(){
         }
     }
 }
+function settingsCheck(){
+    var autosavechecking = document.getElementById("autosav").valueAsNumber
+    if (autosavechecking==0 || autosavechecking>10){
+    inshop=0;
+    astmax=document.getElementById("autosav").valueAsNumber
+    autosavetimer=astmax
+    document.getElementById("settingsui").style="opacity: 1; position: absolute; top: 0px; left: -100%; height: 250px; width: 250px; background-color: #FFFFFF; border-color: #000000; border-width: 1px; color: #000000; z-index: 4;";
+    }
+}
 //oh look, the first function, the most important!! remains the same name, but it'ś the updater
 var byebye = setInterval(function(){
     if (loaded==1){
     updateAutoSave()
     updateLevelandAuto()
     updatePressing()
+    if (challenge!==0){
+    updateChallenge()
+    }
     if (planets==1){
     updatePlanets()
     }
@@ -2371,10 +2388,7 @@ if (inshop==0 && dimension==0){
     document.getElementById("settingsui").style="opacity: 1; position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; background-color: #FFFFFF; border-color: #000000; border-width: 1px; color: #000000; z-index: 4;";
     document.getElementById("autosav").value=astmax
 } else if (inshop==-2){
-    inshop=0;
-    astmax=document.getElementById("autosav").valueAsNumber
-    autosavetimer=astmax
-    document.getElementById("settingsui").style="opacity: 1; position: absolute; top: 0px; left: -100%; height: 250px; width: 250px; background-color: #FFFFFF; border-color: #000000; border-width: 1px; color: #000000; z-index: 4;";
+    settingsCheck()
 } else if (inshop==-3){
     inshop=-4;
     document.getElementById("challengeui").style="opacity: 1; position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; background-color: #000000; border-color: #FFFFFF; border-width: 1px; color: #FFFFFF; z-index: 4;";
