--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1195,7 +1195,7 @@ function updateChallenge(){
     document.getElementById("Goal2rew").innerText=((goals2)*100)
     document.getElementById("Goal3lvl").innerText=((goals3+1)*10)
     document.getElementById("Goal3don").innerText=goals3+"/50"
-    document.getElementById("Goal3rew").innerText=((goals3)*25)
+    document.getElementById("Goal3rew").innerText=((goals3)*100)
     document.getElementById("Goal4lvl").innerText=(60-((goals4)*2.5))
     document.getElementById("Goal4don").innerText=goals4+"/23"
     document.getElementById("Goal4rew").innerText=((goals4)*25)
@@ -1380,11 +1380,11 @@ function updateResets(){
 }
 function updateXPmult(){
     if (challenge!==3 && challenge!==4 && challenge!==5){
-    mxpmul=((pxpmul*((goals3*0.25)+1))*(ascXP+1))
+    mxpmul=((pxpmul*(goals3+1))*(ascXP+1))
     } else if (challenge==3 || challenge==4){
-    mxpmul=(((goals3*0.25)+1)*(ascXP+1))
+    mxpmul=((goals3+1)*(ascXP+1))
     } else if (challenge==5) {
-    mxpmul=((goals3*0.25)+1)
+    mxpmul=((goals3)+1)
     }
     if (mxpmul==0){
     document.getElementById("xpmultiplier").innerText=" x"+mxpmul
@@ -1491,7 +1491,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(0.1*mxpmul)
     } else if (dimension==1){
-        axppts+=(0.01*mxpmul)
+        axppts+=(0.01*(goals3+1))
     }
     } else if (pressesdec>=11 && pressesdec<111){
     pressesdec-=11
@@ -1500,7 +1500,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(1*mxpmul)
     } else if (dimension==1){
-        axppts+=(0.1*((goals3*0.25)+1))
+        axppts+=(0.1*(goals3+1))
     }
     } else if (pressesdec>=111 && pressesdec<1111){
     pressesdec-=111
@@ -1509,7 +1509,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(11*mxpmul)
     } else if (dimension==1){
-        axppts+=(1*((goals3*0.25)+1))
+        axppts+=(1*((goals3)+1))
     }
     } else if (pressesdec>=1111 && pressesdec<11111){
     pressesdec-=1111
@@ -1518,7 +1518,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(111*mxpmul)
     } else if (dimension==1){
-        axppts+=(11*((goals3*0.25)+1))
+        axppts+=(11*(goals3+1))
     }
     } else if (pressesdec>=11111 && pressesdec<111111){
     pressesdec-=11111
@@ -1527,7 +1527,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(1111*mxpmul)
     } else if (dimension==1){
-        axppts+=(111*((goals3*0.25)+1))
+        axppts+=(111*(goals3+1))
     }
     } else if (pressesdec>=111111 && pressesdec<1111111){
     pressesdec-=111111
@@ -1536,7 +1536,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(11111*mxpmul)
     } else if (dimension==1){
-        axppts+=(1111*((goals3*0.25)+1))
+        axppts+=(1111*(goals3+1))
     }
     } else if (pressesdec>=1111111 && pressesdec<11111111){
     pressesdec-=1111111
@@ -1545,7 +1545,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(111111*mxpmul)
     } else if (dimension==1){
-        axppts+=(11111*((goals3*0.25)+1))
+        axppts+=(11111*(goals3+1))
     }
     } else if (pressesdec>=11111111 && pressesdec<111111111){
     pressesdec-=11111111
@@ -1554,7 +1554,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(1111111*mxpmul)
     } else if (dimension==1){
-        axppts+=(111111*((goals3*0.25)+1))
+        axppts+=(111111*(goals3+1))
     }
     } else if (pressesdec>=111111111 && pressesdec<1111111111){
     pressesdec-=111111111
@@ -1563,7 +1563,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(11111111*mxpmul)
     } else if (dimension==1){
-        axppts+=(1111111*((goals3*0.25)+1))
+        axppts+=(1111111*(goals3+1))
     }
     } else if (pressesdec>=1111111111 && pressesdec<11111111111){
     pressesdec-=1111111111
@@ -1572,7 +1572,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(111111111*mxpmul)
     } else if (dimension==1){
-        axppts+=(11111111*((goals3*0.25)+1))
+        axppts+=(11111111*(goals3+1))
     }
     } else if (pressesdec>=11111111111){
     pressesdec-=11111111111
@@ -1581,7 +1581,7 @@ function updateLevelandAuto(){
     if (dimension==0){
         mxppts+=(1111111111*mxpmul)
     } else if (dimension==1){
-        axppts+=(111111111*((goals3*0.25)+1))
+        axppts+=(111111111*(goals3+1))
     }
     }
     }
